// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Breadcrumbs Large 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 16px;
}

.emotion-1 {
  color: grey;
  border: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0px 5px;
  cursor: pointer;
}

.emotion-1:hover {
  text-decoration-line: underline;
}

.emotion-2 {
  color: grey;
  border: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0px 5px;
  cursor: pointer;
  pointer-events: none;
  cursor: default;
}

.emotion-2:hover {
  text-decoration-line: underline;
}

.emotion-3 {
  color: grey;
  border: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0px 5px;
  cursor: pointer;
  color: black;
  text-decoration-line: underline;
  cursor: default;
  font-weight: bold;
}

.emotion-3:hover {
  text-decoration-line: underline;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      style={
        Object {
          "display": "inherit",
        }
      }
    >
      <a
        className="emotion-1"
        href="/"
      >
        <p>
          Enabled link
        </p>
      </a>
    </div>
    <div
      style={
        Object {
          "display": "inherit",
        }
      }
    >
      <p>
        &gt;
      </p>
      <a
        className="emotion-2"
        href="/"
      >
        <p>
          Disabled nested link
        </p>
      </a>
    </div>
    <div
      style={
        Object {
          "display": "inherit",
        }
      }
    >
      <p>
        &gt;
      </p>
      <div
        className="emotion-3"
      >
        <p>
          Current Location Name
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Breadcrumbs Medium 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 14px;
}

.emotion-1 {
  color: grey;
  border: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0px 5px;
  cursor: pointer;
}

.emotion-1:hover {
  text-decoration-line: underline;
}

.emotion-2 {
  color: grey;
  border: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0px 5px;
  cursor: pointer;
  pointer-events: none;
  cursor: default;
}

.emotion-2:hover {
  text-decoration-line: underline;
}

.emotion-3 {
  color: grey;
  border: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0px 5px;
  cursor: pointer;
  color: black;
  text-decoration-line: underline;
  cursor: default;
  font-weight: bold;
}

.emotion-3:hover {
  text-decoration-line: underline;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      style={
        Object {
          "display": "inherit",
        }
      }
    >
      <a
        className="emotion-1"
        href="/"
      >
        <p>
          Enabled link
        </p>
      </a>
    </div>
    <div
      style={
        Object {
          "display": "inherit",
        }
      }
    >
      <p>
        &gt;
      </p>
      <a
        className="emotion-2"
        href="/"
      >
        <p>
          Disabled nested link
        </p>
      </a>
    </div>
    <div
      style={
        Object {
          "display": "inherit",
        }
      }
    >
      <p>
        &gt;
      </p>
      <div
        className="emotion-3"
      >
        <p>
          Current Location Name
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Breadcrumbs Small 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 12px;
}

.emotion-1 {
  color: grey;
  border: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0px 5px;
  cursor: pointer;
}

.emotion-1:hover {
  text-decoration-line: underline;
}

.emotion-2 {
  color: grey;
  border: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0px 5px;
  cursor: pointer;
  pointer-events: none;
  cursor: default;
}

.emotion-2:hover {
  text-decoration-line: underline;
}

.emotion-3 {
  color: grey;
  border: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0px 5px;
  cursor: pointer;
  color: black;
  text-decoration-line: underline;
  cursor: default;
  font-weight: bold;
}

.emotion-3:hover {
  text-decoration-line: underline;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      style={
        Object {
          "display": "inherit",
        }
      }
    >
      <a
        className="emotion-1"
        href="/"
      >
        <p>
          Enabled link
        </p>
      </a>
    </div>
    <div
      style={
        Object {
          "display": "inherit",
        }
      }
    >
      <p>
        &gt;
      </p>
      <a
        className="emotion-2"
        href="/"
      >
        <p>
          Disabled nested link
        </p>
      </a>
    </div>
    <div
      style={
        Object {
          "display": "inherit",
        }
      }
    >
      <p>
        &gt;
      </p>
      <div
        className="emotion-3"
      >
        <p>
          Current Location Name
        </p>
      </div>
    </div>
  </div>
</div>
`;
